# langgraph-travel-cs-agent

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: benchmark.py
src/agent/: workflow.py
src/agent/mcp/: __init__.py  client.py  weather_server.py
src/agent/nodes/: __init__.py  ask_credentials.py  auto_resolve.py  human_escalation.py  intent_recognition.py  knowledge_base.py  routing.py
src/agent/subgraphs/: __init__.py  credential_agent.py
src/api/: main.py
src/config/: settings.py
src/config/templates/: __init__.py  base_template.py  flight_template.py  hotel_template.py  train_template.py
src/services/: milvus_service.py  rag_service.py  redis_service.py
src/state/: schema.py
src/utils/: context_compressor.py  heartbeat.py  logger.py  metrics.py  tracing.py
tests/: test_mcp_weather.py  test_nodes.py  test_templates.py  test_workflow.py
